# pointCloudSkeletonization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.yaml
app/: main.cpp  mesh_skeleton_extraction.cpp  plot_crab.cpp  pointcloud_skeleton_extraction.cpp
data/: 9HandleTorus.off  bunny_full_cloud.ply  bunny_keypoints.ply  bunny_with_noise.ply  correspondence_map.csv  crab_small.off  crab_small.ply  dog.ply  fertilty.off  graph_edges.csv  output.ply  simplejoint_v4770.off  sparse.ply  target_8.ply
data/output/: For mesh.mat  GP_output.mat  bunny_keypoints.ply  bunny_less_noise.ply  graph_edges.csv  graph_nodes.csv  keypoints.ply  loading_data.m  map_ids.csv  runMarchingCube.m  teddy_keypoints_poisson.ply  untitled.m  variance.csv  writeOBJ.m
data/teddy_bear/: graph_edges.csv  graph_nodes.csv
data/to_iris/output/: graph_edges.csv  graph_nodes.csv  loading_data.m  loading_data.m~  map_ids.csv
data/to_teresa/: teddy_keypoints.ply
include/skeleton_toolbox/: connect_by_inherit_neigh.hpp  delaunator.hpp  farthest_sampling.hpp  meshSkeletonization.hpp  pointSkeletonization.hpp  point_ring.hpp  point_ring_from_mesh.hpp
skeleton_toolbox/: farthest_sampling_by_sphere.hpp  pointSkeletonization.hpp
src/: CMakeLists.txt  main.cpp  plot_one_ring.cpp.bk
src/cmake/: FindLIBIGL.cmake
src/external_library/: CMakeLists.txt
src/external_library/directional/: line_cylinders.h  point_spheres.h
src/graph_lib/: graphStructure.hpp  options.hpp  plotGraph.hpp  readGraphOBJ.hpp
src/mesh_tools/: downsample.hpp  getMinMax.hpp  nanoflannWrapper.hpp  plotGraph.hpp  plotMesh.hpp
src/skeleton_toolbox/: compute_initial_laplacian_constraint_weight.hpp  compute_point_laplacian.hpp  connect_by_inherit_neigh.hpp  delaunator.hpp  edge_collapse_update.hpp  farthest_sampling_by_sphere.hpp  normalization.hpp  pointSkeletonization.hpp
src/skeleton_toolbox/trash/: compute_initial_laplacian_constraint_weight.hpp  compute_point_ring.hpp  delaunay_triangulation.hpp  farthest_sampling_by_sphere.hpp.debug  greedySearch.cpp  one_ring_trash.hpp  pointSkeletonizationOptions.hpp  point_ring.hpp  voronoi.hpp
src/utils/: EigenConcatenate.hpp  EigenFind.hpp  EigenListToMatrix.hpp  EigenNanoflann.hpp  EigenSparse.hpp  EigenSparseConcatenate.hpp  EigenTools.hpp  options.hpp  plotMesh.hpp
utils/: EigenConcatenate.hpp  EigenWriteToCSV.hpp  options.hpp  plotCloud.hpp  plotHybrid.hpp  plotMesh.hpp  readOFF.cpp  writePLY.cpp
utils/EigenTools/: cast_vector_to_matrix.hpp  minMax.hpp  remove_duplicates.cpp
utils/IO/: readOFF.h
utils/eigenTools/: remove_duplicates.h
